<resources>
    <string name="app_name">Base Android</string>
    <string name="_001_fragment_button">001_Fragment</string>

    <string name="login_text">Login:</string>
    <string name="password_text">Password:</string>
    <string name="login_button">Login</string>

    <string name="empty_text" />

    <string name="first_fragment">first fragment</string>
    <string name="second_fragment">second fragment</string>
    <string name="add_text">Add</string>
    <string name="remove_text">Remove</string>
    <string name="replace_text">Replace</string>
    <string name="_002_dynamic_fragment_text">002_dynamic_fragment</string>
    <string name="_003_fragments_and_activities">003_Fragments_and_Activities</string>

    <string name="hello_second_fragment_text">Hello Second Fragment</string>
    <string name="hello_activity_text">Hello Activity</string>
    <string name="hello_first_fragment">Hello First Fragment</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="_004_fragments_lifecycle">004 Fragments Lifecycle</string>
    <string name="_005_send_data_to_fragment">005 Send Data to Fragment</string>

    <string name="hint_your_login_edit_text">your login</string>
    <string name="hint_your_password_edit_text">your password</string>
    <string name="register_text_view">Register</string>
    <string name="press_name_text_view">Press name:</string>
    <string name="register_text">Register</string>
    <string name="your_login_text">Your Login:</string>
    <string name="fragment_example_text">006 Fragment Example</string>
    <string name="settings_text">Settings</string>
    <string name="about_author_text">About Author</string>
    <string name="official_site">Official Site</string>
    <string name="aleksandr_omelchenko">Aleksandr Omelchenko</string>
    <string name="_40">40</string>
    <string name="_007_menu_example">007 Menu Example</string>
    <string name="navigation_tabs">008 Navigation Tabs</string>
    <string name="_009_navigation_list">009 Navigation List</string>
    <string name="_010_dynamic_action_bar">010 Dynamic Action Bar</string>
    <string name="show_text">Show</string>
    <string name="fragment_text">Fragment</string>
    <string name="fragment_1_item">Fragment 1 Item</string>
    <string name="fragment_2_item">Fragment 2 Item</string>
    <string name="menu_group">Menu Group</string>
    <string name="group">Group menu</string>
    <string name="item_1">Item1</string>
    <string name="item_2">Item2</string>
    <string name="item_3">Item3</string>
    <string name="item_4">Item4</string>
    <string name="_011_action_mode">011 Action Mode</string>
    <string name="action_mode_text">Action Mode</string>
    <string name="first_dialog_fragment">First Dialog Fragment</string>
    <string name="second_dialog_fragment">Second Dialog Fragment</string>
    <string name="_012_dialog_fragment">012 Dialog Fragment</string>
    <string name="you_agree_with_us">You agree with us?</string>
    <string name="yes">YES</string>
    <string name="no">NO</string>
    <string name="maybe">MAYBE</string>

</resources>
