<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/item1"
        app:showAsAction="always"
        android:title="@string/item_1"/>

    <item
        android:id="@+id/item2"
        android:icon="@drawable/ic_action_call"
        app:showAsAction="ifRoom"
        android:title="@string/item_2" />

    <item
        android:id="@+id/item3"
        android:icon="@drawable/ic_action_info_details"
        app:showAsAction="ifRoom|withText"
        android:title="@string/item_3"/>

    <item
        android:id="@+id/item4"
        android:icon="@drawable/ic_action_menu"
        app:showAsAction="never"
        android:title="@string/item_4"/>

</menu>