<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="8dp"
    tools:context=".MainActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <Button
                android:id="@+id/_001_fragment_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:onClick="click"
                android:text="@string/_001_fragment_button" />

            <Button
                android:id="@+id/_002_dynamic_fragment"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:onClick="click"
                android:text="@string/_002_dynamic_fragment_text" />

            <Button
                android:id="@+id/_003_fragments_and_activities"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:onClick="click"
                android:text="@string/_003_fragments_and_activities" />

            <Button
                android:id="@+id/_004_fragments_lifecycle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:onClick="click"
                android:text="@string/_004_fragments_lifecycle" />

            <Button
                android:id="@+id/_005_send_data_from_activity_to_fragment"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:onClick="click"
                android:text="@string/_005_send_data_to_fragment" />

            <Button
                android:id="@+id/_006_fragment_example"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:onClick="click"
                android:text="@string/fragment_example_text" />

            <Button
                android:id="@+id/_007_menu_example"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:onClick="click"
                android:text="@string/_007_menu_example" />

            <Button
                android:id="@+id/_008_navigation_tabs"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:onClick="click"
                android:text="@string/navigation_tabs" />

            <Button
                android:id="@+id/_009_navigation_list"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:onClick="click"
                android:text="@string/_009_navigation_list" />

            <Button
                android:id="@+id/_010_dynamic_action_bar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:onClick="click"
                android:text="@string/_010_dynamic_action_bar" />

            <Button
                android:id="@+id/_011_action_mode"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:onClick="click"
                android:text="@string/_011_action_mode" />

        </LinearLayout>

    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>