<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="8dp"
    tools:context="._002_adding_fragment.AddingFragmentActivity">

    <Button
        android:id="@+id/add_button"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:onClick="dynamicFragmentOnClick"
        android:text="@string/add_text"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintWidth_percent="0.3" />

    <Button
        android:id="@+id/remove_button"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:onClick="dynamicFragmentOnClick"
        android:text="@string/remove_text"
        app:layout_constraintEnd_toStartOf="@+id/replace_button"
        app:layout_constraintStart_toEndOf="@+id/add_button"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintWidth_percent="0.3" />

    <Button
        android:id="@+id/replace_button"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:onClick="dynamicFragmentOnClick"
        android:text="@string/replace_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintWidth_percent="0.3" />

    <LinearLayout
        android:id="@+id/content_fragment_linear_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toTopOf="@+id/guideline"
        tools:layout_editor_absoluteX="8dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="56dp" />

</androidx.constraintlayout.widget.ConstraintLayout>