<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="8dp"
    android:background="@color/colorPrimary"
    tools:context="._010_dynamic_action_bar.DynamicActionBarActivity">

    <CheckBox
        android:id="@+id/add_check_box"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/add_text"
        android:textColor="@android:color/white"
        android:textStyle="bold"
        android:layout_marginTop="16dp"
        android:onClick="onClick"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <CheckBox
        android:id="@+id/show_check_box"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/show_text"
        android:textStyle="bold"
        android:textColor="@android:color/white"
        android:layout_marginTop="8dp"
        android:onClick="onClick"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/add_check_box" />

    <Button
        android:id="@+id/fragment_action_bar_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/fragment_text"
        android:layout_marginTop="8dp"
        android:onClick="onClick"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/show_check_box" />

    <FrameLayout
        android:id="@+id/fragment_frame_layout"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="8dp"
        android:background="@color/colorAccent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/fragment_action_bar_button">

    </FrameLayout>

</androidx.constraintlayout.widget.ConstraintLayout>